# TeXSwarm

./: .gitignore  Cargo.toml  DOCUMENT_SYNC_ISSUES.md  README.md  SYNCHRONIZATION_SOLUTION.md  config.json
docs/: additional_fixes.md  advanced_web_connectivity_fixes.md  api_protocol.md  document_branch_fix_summary.md  fix_summary.md  libp2p_fixes_example.rs  network_changes_summary.md  network_fixes.md  network_implementation_plan.md  new_web_app.md  server_connectivity.md  server_setup_guide.md  server_side_document_fixes.md  web_app_summary.md  web_connectivity.md  web_connectivity_fixes.md  web_connectivity_testing.md  webapp_document_persistence_fixes.md  websocket_fix_summary.md  websocket_implementation_improvements.md  websocket_protocol_fix.md  websocket_protocol_permanent_fix.md  websocket_session_fixes.md
src/: lib.rs
web/: README.md  branch_tester.html  branch_tester_helper.js  branch_tester_message_handler.js  check_server_status.sh  connection_test.html  connectivity_test.html  document-creation-enhancement.js  document-operation-fix.js  index.html  local-document-storage.js  new-app.js  new-index.html  new-styles.css  package-lock.json  package.json  ping_test.html  script.js  serve.sh  serve_connectivity_test.sh  serve_new_app.sh  serve_ping_test.sh  serve_protocol_example.sh  serve_simple.sh  serve_webapp_test.sh  serve_websocket_debug.sh  serve_websocket_test.sh  serve_with_cors.sh  simple_ws_test.js  test_connection.sh  test_document_branches.js  test_ping.sh  test_server_connectivity.sh  test_user_api.sh  test_webapp.sh  test_websocket.js  (+9 more)
(+34 files in other folders)
