[package]
name = "p2p-latex-collab"
version = "0.1.0"
edition = "2024"
authors = ["P2P LaTeX Collaboration Team"]
description = "A decentralized P2P alternative to Overleaf for collaborative LaTeX editing"
license = "MIT"
repository = "https://github.com/example/p2p-latex-collab"

[dependencies]
# CRDT for collaborative editing
diamond-types = "1.0.0"

# P2P networking
libp2p = { version = "0.51.3", features = ["tcp", "tokio", "websocket", "noise", "yamux", "gossipsub", "request-response", "kad", "mdns", "identify", "ping", "macros", "dns"] }
futures = "0.3.28"
tokio = { version = "1.36.0", features = ["full"] }
sha2 = "0.10.7"

# Git integration
git2 = "0.18.0"

# API and protocols
warp = "0.3.6"                  # HTTP server for REST API
tokio-tungstenite = "0.20.1"    # WebSockets
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"

# Utilities
tracing = "0.1.37"              # Logging
tracing-subscriber = "0.3.17"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
thiserror = "1.0.48"            # Error handling
anyhow = "1.0.75"
async-trait = "0.1.73"
chrono = { version = "0.4.26", features = ["serde"] }
dashmap = "5.5.3"               # Thread-safe concurrent HashMap
directories = "5.0.1"           # Project directories
void = "1.0.2"

[lib]
name = "p2p_latex_collab"
path = "src/lib.rs"

[[bin]]
name = "p2p-latex-collab-server"
path = "src/bin/server.rs"
